--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,3 +1,17 @@
-<div class="index-container">
-  
+<div class="container">
+  <div class="col ">
+    <div class="col">
+      <img class="large-beer" src="./images/beer.png" alt="beer">
+    </div>
+    <div class="col">
+      <form action="/beers">
+         <button type="submit">Check the Beers!</button>
+      </form>
+    </div>
+    <div class="col">
+      <form action="/random-beers">
+         <button type="submit">Check a Random Beer!</button>
+      </form>
+    </div>
+  </div>
 </div>
